CSS fixes
* All pages have custom scrollbar styles
* Fix settings page file list width

--- a/css/download.css
+++ b/css/download.css
@@ -2,6 +2,31 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scrollbar-color: #2196f3 transparent;
+  scrollbar-track-color: transparent;
+  scrollbar-arrow-color: transparent;
+  scrollbar-face-color: #2196f3;
+  scrollbar-shadow-color: transparent;
+  scrollbar-highlight-color: #1976d2;
+}
+
+*::-webkit-scrollbar, *::-webkit-scrollbar-corner, *::-webkit-scrollbar-track, *::-webkit-scrollbar-button {
+  background-color: transparent;
+  width: 10px;
+  height: 10px;
+}
+
+*::-webkit-scrollbar-track, *::-webkit-scrollbar-button {
+  display: none;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #2196f3;
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #1976d2;
 }
 
 body {
