--- a/css/settings.css
+++ b/css/settings.css
@@ -10,6 +10,25 @@
   scrollbar-highlight-color: #1976d2;
 }
 
+*::-webkit-scrollbar, *::-webkit-scrollbar-corner, *::-webkit-scrollbar-track, *::-webkit-scrollbar-button {
+  background-color: transparent;
+  width: 10px;
+  height: 10px;
+}
+
+*::-webkit-scrollbar-track, *::-webkit-scrollbar-button {
+  display: none;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #2196f3;
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #1976d2;
+}
+
 body {
   background-color: #535353;
   font-family: Arial, sans-serif;
@@ -48,20 +67,18 @@ body {
   width: calc(100% - 250px);
   padding: 10px;
   padding-top: 0px;
-  overflow: auto;
   height: calc(100% - 60px);
 }
 
 .col {
   float: left;
-  width: calc((100%-250px) / 3);
+  width: calc(100% / 3);
   padding-left: 5px;
   padding-right: 5px;
   height: 90px;
 }
 
 .row {
-  width: calc(100%-250px);
   border: none;
 }
 
@@ -550,7 +567,7 @@ h2 {
   }
 }
 
-@media only screen and (max-width: 1226px) {
+@media only screen and (max-width: 1325px) {
   #password-change-modal-content {
     width: 75%;
   }
@@ -608,23 +625,4 @@ h2 {
     left: 0px;
     top: 80px;
   }
-}
-
-*::-webkit-scrollbar, *::-webkit-scrollbar-corner, *::-webkit-scrollbar-track, *::-webkit-scrollbar-button {
-  background-color: transparent;
-  width: 10px;
-  height: 10px;
-}
-
-*::-webkit-scrollbar-track, *::-webkit-scrollbar-button {
-  display: none;
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: #2196f3;
-  border-radius: 5px;
-}
-
-*::-webkit-scrollbar-thumb:hover {
-  background-color: #1976d2;
 }
